Hooked up CLI with first implementation of Wiki engine

--- a/aiwiki-cli/pom.xml
+++ b/aiwiki-cli/pom.xml
@@ -23,6 +23,12 @@
             <groupId>org.springframework.shell</groupId>
             <artifactId>spring-shell-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>ch.lianto</groupId>
+            <artifactId>aiwiki-engine</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -36,4 +42,17 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
