--- a/openai-client/pom.xml
+++ b/openai-client/pom.xml
@@ -280,5 +280,11 @@
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
