Feature: print response chunks instead of waiting for complete assistant response
Squashed commit of the following:

commit b30a5e8e2d87c15d903af265ebe4bc6dec3b39a7
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Fri Dec 8 22:35:51 2023 +0100

    Implemented lazy response chunking for assistant

--- a/aiwiki-cli/src/main/resources/application.yaml
+++ b/aiwiki-cli/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ spring:
       enabled: true
   flyway:
     enabled: false
+  jackson:
+    default-property-inclusion: non_empty
 app:
   persistence:
     simple:
