--- a/aiwiki-engine/pom.xml
+++ b/aiwiki-engine/pom.xml
@@ -46,6 +46,13 @@
             <version>2.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
+            <version>3.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
