--- a/openai-client/pom.xml
+++ b/openai-client/pom.xml
@@ -20,12 +20,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot-web-version>2.4.2</spring-boot-web-version>
-        <spring-web-version>5.3.24</spring-web-version>
-        <jackson-version>2.14.2</jackson-version>
-        <jackson-databind-version>2.15.1</jackson-databind-version>
+        <spring-boot-version>2.6.6</spring-boot-version>
+        <jackson-version>2.15.2</jackson-version>
+        <jackson-databind-version>2.15.2</jackson-databind-version>
         <jackson-databind-nullable-version>0.2.6</jackson-databind-nullable-version>
         <jakarta-annotation-version>1.3.5</jakarta-annotation-version>
+        <reactor-version>3.4.3</reactor-version>
+        <reactor-netty-version>1.0.4</reactor-netty-version>
         <junit-version>4.13.2</junit-version>
     </properties>
 
