Feature: performance benchmarking module
Squashed commit of the following:

commit 61700c83cdc1b3474bc6a647de5d4ae2f12c7044
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Sat Jan 6 00:03:41 2024 +0100

    Ran first benchmark execution

commit 6171cf378b5037c8ef8dcde4e1a64691fb50572f
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Tue Jan 2 22:33:29 2024 +0100

    Added spring jpa spider

commit 96f0a5c59e668fba85098ccdd528f3cbd140d2c7
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Tue Jan 2 14:38:17 2024 +0100

    Added bs4 spider

commit d506c9f35ced7e5f7034f3d64ccef04ad9784391
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Tue Jan 2 14:09:49 2024 +0100

    Renamed base directory for python scrapers

commit 510de6e71ba2f74bde75d61a365d201e6c0e0b46
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Tue Jan 2 13:56:22 2024 +0100

    Tried implementing Oblique spider

commit 4a2c550c38df2677da8df9e6f85f07f679d1819f
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Wed Dec 20 22:48:38 2023 +0100

    Small adjustments after first benchmark test-run

commit 0504de802441e274a3940fb0db6d45e6ab3846d0
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Tue Dec 19 23:57:00 2023 +0100

    Implemented BenchmarkService

commit 4edb10cc1ae47d0e34154a01fae5157924786ceb
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Sat Dec 16 02:19:34 2023 +0100

    Implemented performance calculation strategy

commit 69bb210d486f7cc0e04c5b7f18d2acf45db5da3c
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Fri Dec 15 23:46:36 2023 +0100

    Implemented BenchmarkReporter

commit 3d5a70606fff961781ee55c3d6bc40b793714688
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Wed Dec 13 20:49:41 2023 +0100

    Created new benchmark module with basic code

commit ccb4b31edd52e48031d45275fbe9c3523b0fed1b
Author: Andre Berzun <andre.berzun@gmx.de>
Date:   Wed Dec 13 20:39:43 2023 +0100

    Renamed service package to policy

commit 931a226f635cdb9361978f30e2fe8a66a41b655b
Autho

--- a/aiwiki-cli/pom.xml
+++ b/aiwiki-cli/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>aiwiki-engine</artifactId>
             <version>${parent.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.lianto</groupId>
+            <artifactId>aiwiki-benchmarks</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
