Rename benchmarking module to evals and convert existing datasets to TREC format

--- a/aiwiki-cli/pom.xml
+++ b/aiwiki-cli/pom.xml
@@ -32,7 +32,7 @@
 
         <dependency>
             <groupId>ch.lianto</groupId>
-            <artifactId>aiwiki-benchmarks</artifactId>
+            <artifactId>aiwiki-evals</artifactId>
             <version>${parent.version}</version>
         </dependency>
     </dependencies>
