--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>aiwiki-engine</module>
         <module>aiwiki-cli</module>
         <module>openai-client</module>
-        <module>aiwiki-benchmarks</module>
+        <module>aiwiki-evals</module>
         <module>ollama-client</module>
     </modules>
 
