--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 
     <properties>
         <java.version>21</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <spring-shell.version>3.2.2</spring-shell.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
     </properties>
